-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
On error ll_open_cleanup() is called while intent lock remains pinned.
So eviction can happen while close request waits for a mod rpc slot.
Stack : __schedule schedule obd_get_mod_rpc_slot ptlrpc_get_mod_rpc_slot mdc_close lmv_close ll_open_cleanup ll_prep_inode ll_lookup_it ll_atomic_open do_last path_openat do_filp_open do_sys_open sys_open system_call_fastpath Progs: 13284 "file_concat.sh"